# persistent-resources-tests

./: .gitignore  .gitreview  .project  .pydevproject  README.md  README.rst  setup.cfg  setup.py
persistent_resources_tempest_plugin/: plugin.py
persistent_resources_tempest_plugin/tests/api/compute/: test_cleanup_compute_resources.py  test_create_compute_resources.py  test_validate_compute_resources.py
persistent_resources_tempest_plugin/tests/api/object_storage/: test_cleanup_object_storage_resources.py  test_create_object_storage_resources.py  test_vaildate_object_storage_resources.py  test_validate_object_storage_resources.py
upgrade_tests_tempest_plugin/: README.rst  plugin.py
upgrade_tests_tempest_plugin/tests/api/compute/: cleanup_compute_resources.py  create_compute_resources.py  test_cleanup_compute_resources.py  test_create_compute_resources.py  test_validate_compute_resources.py
