[metadata]
name = openstack-persistent_resources-tests
author = OSIC
summary = OpenStack tempest plugin for testing persistent resources during an upgrade
description-file = 
    README.rst
home-page = https://github.com/CasJ/openstack-upgrade-tests
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[entry_points]
tempest.test_plugins =
    persistent_resources-tempest-plugin = persistent_resources_tempest_plugin.plugin:PersistentResourcesTestsPlugin

[pbr]
warnerrors = true
